JDA: Fix deadlock for non-JDA case

The code will enter deadlock if the device has no JPEG decode
accelerator.
This CL fixes it.

BUG=chromium:790838
TEST=test camera preview on minnie

Change-Id: I695f80351a451614c7c830e3e31b40196fe9b457
Reviewed-on: https://chromium-review.googlesource.com/802935
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Ricky Liang <jcliang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521085}
Former-commit-id: 97537191cfbbca6a2f1d5f4c19c86d34adbe9419